# EE-lab

./: Part Studio 1 (1)_v2.step  Part Studio 1.step  Part Studio 1_v3.step  Part Studio 1_v4.step
cad/electronics-bringup-station/: Part_Studio_1_v4_review.md  Part_Studio_1_v5.step  README.md  adam-cad-current-model-continuation.prompt.md  adam-cad-dvt-master.prompt.md  adam-cad-enclosure-later.prompt.md  adam-cad-evt-pass-1-motion.prompt.md  adam-cad-evt-pass-1-run-prompts.md  adam-cad-final-machine-image-reference.prompt.md  adam-cad-internal-mechanism.prompt.md  evt-roadmap.md  (+11 more)
docs/: firstlight-fl1-onepager.html  prompt-to-pcba.md  v0-ui-prompt.md  zero-shot-sequencing.md
software/: ARCHITECTURE.md
software/station/: README.md  pyproject.toml
software/station/src/bringup_station/: __init__.py  config.py  sim.py
software/station/src/bringup_station/api/: server.py
software/station/src/bringup_station/boardio/: testpoints.py
software/station/src/bringup_station/hal/: interfaces.py  mocks.py
software/station/src/bringup_station/manifest/: compile.py  schema.py
software/station/src/bringup_station/measure/: waveforms.py
software/station/src/bringup_station/motion/: gantry.py
software/station/src/bringup_station/safety/: interlocks.py
software/station/src/bringup_station/sequencer/: engine.py  plan.py
software/station/src/bringup_station/switching/: matrix.py
software/station/src/bringup_station/vision/: registration.py
software/station/tests/: test_engine.py  test_gantry.py  test_manifest.py  test_matrix.py  test_registration.py
(+196 files in other folders)
